--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>HTML Tables</title>
   </head>
   <body>
-    <!-- Write your HTML here -->
+    <table bgcolor="black">    
+      <tr bgcolor="white">
+        <th>City</th>
+        <th>State<sup>[5]</sup></th>
+        <th>2017 estimate</th>
+      </tr>
+      <tr bgcolor="white">
+        <td>New York<sup>[6]</sup></td>
+        <td>New York</td>
+        <td>8,622,698</td>
+      </tr>
+      <tr bgcolor="white">
+        <td>Los Angeles</td>
+        <td>California</td>
+        <td>3,999,759</td>
+      </tr>
+      <tr bgcolor="white">
+        <td>Chicago</td>
+        <td>Illinois</td>
+        <td>2,716,450</td>
+      </tr>
+      <tr bgcolor="white">
+        <td>Houston<sup>[7]</sup></td>
+        <td>Texas</td>
+        <td>2,312,717</td>
+      </tr>
+    </table>
   </body>
 </html>
